--- a/client/src/app/components/form.component.html
+++ b/client/src/app/components/form.component.html
@@ -1,49 +1,58 @@
-<form fxFill class="p-1" fxLayout="column" fxLayoutAlign="start center">
-    <mat-card class="p-3" fxLayout="column" fxLayoutAlign="center center">
-        <mat-form-field>
-            <mat-label>Customer Name</mat-label>
-            <mat-select required>
-                <mat-option *ngFor="let i of customerList" value="i.id">
-                    {{i.name}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Employee Name</mat-label>
-            <mat-select required>
-                <mat-option *ngFor="let i of employeeList" value="i.id">
-                    {{i.name}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Shipper Name</mat-label>
-            <mat-select required>
-                <mat-option *ngFor="let i of shipperList" value="i.id">
-                    {{i.name}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <button type="button" mat-raised-button color="accent" (click)="this.addProduct()">Add product</button>
-    </mat-card>
-    <div fxLayout="column">
-        <mat-card *ngFor="let i of productArray.controls;let num = index" class="mt-1 mb-1">
-            <mat-form-field class="ml-1 mr-1">
-                <mat-label>Product Name</mat-label>
+<form fxFill class="p-1" fxLayout="row" fxLayoutAlign="center center">
+    <div fxFlex="60" [fxFlex.xs]="80">
+        <mat-card fxLayout="column" fxLayout="column" fxLayoutAlign="center stretch">
+            <mat-form-field>
+                <mat-label>Customer Name</mat-label>
                 <mat-select required>
-                    <mat-option *ngFor="let i of productList" value="i.id">
+                    <mat-option *ngFor="let i of customerList" value="i.id">
                         {{i.name}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field>
-                <mat-label>Product Qty</mat-label>
-                <input type="number" matInput>
+                <mat-label>Employee Name</mat-label>
+                <mat-select required>
+                    <mat-option *ngFor="let i of employeeList" value="i.id">
+                        {{i.name}}
+                    </mat-option>
+                </mat-select>
             </mat-form-field>
-            <button class="ml-1 mr-1" (click)="this.removeProduct(num)">X</button>
+            <mat-form-field>
+                <mat-label>Shipper Name</mat-label>
+                <mat-select required>
+                    <mat-option *ngFor="let i of shipperList" value="i.id">
+                        {{i.name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button type="button" mat-raised-button color="accent" (click)="this.addProduct()">Add product</button>
         </mat-card>
-    </div>
-    <div>
-        <button type="submit" class="mt-1" mat-raised-button color="primary">Submit order</button>
+        <div fxLayout="column" class="mt-1" *ngIf="productArray.length > 0">
+            <ng-container *ngFor="let i of productArray.controls;let num = index">
+                <div fxLayout="row" fxLayoutAlign="center center" class="mt-1 mb-1">
+                    <mat-form-field class="ml-1 mr-1" fxFlex="60">
+                        <mat-label>Product Name</mat-label>
+                        <mat-select required>
+                            <mat-option *ngFor="let i of productList" value="i.id">
+                                {{i.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field fxFlex="20">
+                        <mat-label>Product Qty</mat-label>
+                        <input type="number" matInput>
+                    </mat-form-field>
+                    <div fxFlex>
+                        <button mat-raised-button class="ml-1 mr-1"  (click)="this.removeProduct(num)">X</button>
+                    </div>
+                </div>
+                <div>
+                    <mat-divider></mat-divider>
+                </div>
+            </ng-container>
+        </div>
+        <div fxLayout="column">
+            <button type="submit" class="mt-1" mat-raised-button color="primary">Submit order</button>
+        </div>
     </div>
 </form>
