--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-html, body { height: 100%; }
+html, body { 
+    height: 100% !important;
+    width: 100% !important;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(206, 206, 206);}
 
 /* HTML */
